hphp/hack/test/typecheck/strict_switch/num_int.php.exp
File "num_int.php", line 15, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default`, `int` (Typing[4019])
  File "num_int.php", line 15, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
File "num_int.php", line 7, characters 10-12:
Case in `switch` must be either an enum constant or a literal expression. (Typing[4020])
File "num_int.php", line 16, characters 10-13:
Switching on `num` but using constant from `null` (Typing[4023])
File "num_int.php", line 25, characters 10-13:
Switching on `num` but using constant from `bool` (Typing[4023])
